--- a/src/styles/courses.css
+++ b/src/styles/courses.css
@@ -9,6 +9,8 @@ p.courses-text{
 
 h1.courses-headers{
     margin: 140px 0 30px 0;
+    padding: 0 2.1px;
+    /* width: 99vw; */
 }
 
 div#shop-container{
