--- a/src/styles/media.css
+++ b/src/styles/media.css
@@ -1,5 +1,6 @@
 .media-headers{
     margin: 80px auto;
+    padding-top: 60px;
 }
 
 .video-card-container:-webkit-scrollbar-track{
